# gimp-tilemap-helper

./: .gitignore  Makefile  README.md
res/: font_numeric_3x5.xcf
src/: Makefile.am  benchmark.c  benchmark.h  filter_dialog.c  filter_dialog.h  filter_image.c  filter_image.h  filter_tilemap_helper.c  filter_tilemap_helper.h  hash.c  hash.h  lib_tilemap.c  lib_tilemap.h  scale.c  scale.h  scaler_nearestneighbor.c  scaler_nearestneighbor.h  tilemap_export.c  tilemap_export.h  tilemap_overlay.c  tilemap_overlay.h  tilemap_tiles.c  tilemap_tiles.h
